[package]
name = "macro_study"
version = "0.1.0"
edition = "2021"
authors = ["Frank Qiu <cn.frank.qiu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true
